fix spacing around popup

--- a/client/components/boards/boardBody.styl
+++ b/client/components/boards/boardBody.styl
@@ -22,7 +22,7 @@ position()
     position: cover
     transition: margin .1s
     overflow-y: auto
-    
+
     a.js-open-inlined-form
       .viewer
         background-color: #f7f7f7
@@ -50,10 +50,6 @@ position()
         display: none
 
 @media screen and (max-width: 800px)
-  .pop-over
-    .board-backgrounds-list
-      padding: 12px
-
   .board-wrapper
     .board-canvas
       .swimlane
