--- a/client/components/boards/boardColors.styl
+++ b/client/components/boards/boardColors.styl
@@ -68,14 +68,6 @@ setBoardColor(color)
       background-color: darken(color, 20%)
 
   @media screen and (max-width: 800px)
-    .pop-over
-      .board-backgrounds-list
-        padding: 12px
-
-    &.pop-over .header
-      // background: color
-      // color: white
-
     &#header ul li.current, &#header-quick-access ul li.current
       border-bottom: 2px solid lighten(color, 25%)
 
