--- a/client/components/main/popup.styl
+++ b/client/components/main/popup.styl
@@ -161,6 +161,9 @@ $popupWidth = 300px
 .select-members-list
   margin-bottom: 8px
 
+.content-spacing
+  padding-top: 16px
+
 .pop-over-list
   li > a
     clear: both
@@ -370,3 +373,6 @@ $popupWidth = 300px
     for depth in (1..6)
       .popup-container-depth-{depth}
         transform: translateX(- (depth - 1) * 100%)
+
+  .content-spacing
+    padding: 16px 12px 12px
